@@ -1,4 +1,8 @@
-﻿drkns 15.01.2016 10:04:34 +0200 - build 4510
+﻿drkns 15.01.2016 23:27:57 +0200 - build 4511
+
+1. 0003153: Стартовать следующий сеанс грабера в режиме предыдущего (прямоугольный/поточный)
+
+drkns 15.01.2016 10:04:34 +0200 - build 4510
 
 1. Несистемная функция копирования некорректно обрабатывала разреженные файлы с размером блока более 4 GB.
 
